--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-hot-boilerplate",
+  "name": "lundbydraw-control",
   "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "description": "Control panel for the LundbyDraw VR headset",
   "scripts": {
     "start": "node server.js",
+    "prod": "webpack --config ./webpack.config.prod.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -21,7 +22,7 @@
     "edit",
     "webpack"
   ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "author": "Jacob Michelsen <jacob.michelsen@tii.se> (http://github.com/jickelsen)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
@@ -41,7 +42,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "jquery": "^2.2.2",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "rethinkdb": "^2.2.2"
   }
 }
