--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jquery": "^2.2.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-router": "^2.0.1",
     "rethinkdb": "^2.2.2"
   }
 }
